<resources>
    <string name="app_name">Morgan\'s Android Labs</string>
    <string name="hello_message">Hello Universe!</string>
    <string name="button_message">I\'m a button</string>
    <string name="edit_message">I\'m an EditText</string>
    <string name="hint_text">Write something here</string>
    <string name="logo_label">The logo for Algonquin College</string>
    <string name="coffee">Do you Drink Coffee?</string>
</resources>